[gd_scene load_steps=10 format=3 uid="uid://dnvojhvof7qld"]

[ext_resource type="Texture2D" uid="uid://qt30568hb6n8" path="res://assets/start.jpeg" id="1_8t08e"]
[ext_resource type="Script" uid="uid://b7obskxwllqbo" path="res://scenes/start.gd" id="1_j3bqk"]
[ext_resource type="Texture2D" uid="uid://4qlt585wykj5" path="res://assets/market.png" id="3_d48hf"]
[ext_resource type="Texture2D" uid="uid://bjhynlo37l6xy" path="res://assets/greenbutton.png" id="3_j3bqk"]
[ext_resource type="Texture2D" uid="uid://buoau0684xqti" path="res://assets/rank.png" id="3_lynlw"]
[ext_resource type="FontFile" uid="uid://dqsifpqqm5vmx" path="res://fonts/Pixeboy.ttf" id="4_yx83k"]
[ext_resource type="Texture2D" uid="uid://cf0qka015qqnl" path="res://assets/inventory.png" id="5_yrm6t"]
[ext_resource type="Texture2D" uid="uid://dg431y857bxyl" path="res://assets/player.png" id="6_yrm6t"]
[ext_resource type="FontFile" uid="uid://c35u4i2axngsu" path="res://fonts/8-BIT WONDER.TTF" id="8_q7y7s"]

[node name="Start" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j3bqk")

[node name="Start" type="Sprite2D" parent="."]
position = Vector2(1, -66)
scale = Vector2(1.3, 1.3)
texture = ExtResource("1_8t08e")

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = -260.0
offset_top = -542.0
offset_right = 264.0
offset_bottom = -384.0
theme_override_constants/separation = 25

[node name="Market" type="Button" parent="TopBar"]
layout_mode = 2
icon = ExtResource("3_d48hf")
flat = true

[node name="Rank" type="Button" parent="TopBar"]
layout_mode = 2
icon = ExtResource("3_lynlw")
flat = true

[node name="Inventory" type="Button" parent="TopBar"]
layout_mode = 2
icon = ExtResource("5_yrm6t")
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="PLayerB" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 350)
layout_direction = 1
layout_mode = 2
flat = true

[node name="Player" type="Sprite2D" parent="VBoxContainer/PLayerB"]
scale = Vector2(1.29087, 1.29087)
texture = ExtResource("6_yrm6t")
centered = false

[node name="Name" type="Label" parent="VBoxContainer/PLayerB"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -24.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.630196, 0.402586, 0, 1)
theme_override_fonts/font = ExtResource("4_yx83k")
theme_override_font_sizes/font_size = 40
text = "LUCA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartB" type="Button" parent="VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_j3bqk")
flat = true
icon_alignment = 1

[node name="Novo" type="Label" parent="VBoxContainer/StartB"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_q7y7s")
theme_override_font_sizes/font_size = 20
text = "novo Jogo
"
horizontal_alignment = 1
vertical_alignment = 1
